# Petsitter

./: .gitignore  CURRENT_BEHAVIOR.md  ISSUES.md  README.md  convo_with_system.txt  log.txt  petsitter  plan.md  pyproject.toml  requirements.txt
.agents/skills/petsitter-create-agent/: SKILL.md
.agents/skills/petsitter-create-trick/: SKILL.md
.agents/skills/petsitter-create-trick/assets/: trick-template.py
.agents/skills/petsitter-create-trick/references/: hook-examples.md  trick-api.md
.agents/skills/self-improver/: SKILL.md
agents/: __init__.py  claude_code.py  codex.py  opencode.py
examples/: modelset.json
examples/evals/: report.py  runner.py  scenarios.py  scorers.py
kennels/: default.json
petsitter/: config.py  main.py  models.py
petsitter/api/: anthropic.py
petsitter/backends/: base.py  ollama.py
petsitter/harness/: __init__.py  loader.py  models.py
petsitter/harness/models/sample-model/: programming.yaml  system_prompt.md
petsitter/logging/: metrics.py
petsitter/retry/: engine.py
petsitter/skills/: stack.py
petsitter/validators/: __init__.py  no_eval_exec.py  registry.py  ruff_lint.py
ps.new/: EXPECTED_BEHAVIOR.md  README.md  convo.txt  plan.md  ps.txt  pyproject.toml
ps.new/src/: loader.py  server.py  trick.py
ps.new/tests/: test_proxy.py  test_server.py
ps.new/tricks/: __init__.py  xml_tool.py
ps.old/: README.md  petsitter  pyproject.toml  todo.md
ps.old/skills/programming/: skill.yaml  system_prompt.md
ps.old/src/petsitter/: config.py
ps.old/src/petsitter/api/: openai.py
ps.old/src/petsitter/backends/: __init__.py
ps.old/src/petsitter/skills/: loader.py
ps.old/src/petsitter/validators/: bandit_security.py  base.py  mypy_types.py
ps.old/tests/: conftest.py  test_harness.py
src/: __init__.py  agent_manager.py  context.py  gui_routes.py  loader.py  proxy.py  server.py  trick.py  trickset.py
src/gui/: index.html  openapi.json  petsitter-type.avif  styles.css  swagger.html
tests/: test_api_handlers.py  test_config.py  test_integration.py  test_models.py  test_proxy.py  test_retry_engine.py  test_secrets_protector.py  test_server.py  test_skills.py  test_trick.py  test_validators.py
tricks/: andybot_toolcall.py  code_validator.py  conversational_tool.py  exportit.py  json_mode.py  kennel.py  list_files.py  mcp_tools.py  multiconsult.py  multiround.py  no_emdash.py  secrets_protector.py  self_improver.py  swapharness.py  tool_call.py  xml_tool.py
tricksets/: gemma4.json  opencode.json
