[project]
name = "petsitter"
version = "0.1.0"
description = "OpenAI-compatible proxy that adds functionality to models through tricks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "starlette>=0.34.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
petsitter = "src.server:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
